--- a/src/components/Home/MascotVisual.css
+++ b/src/components/Home/MascotVisual.css
@@ -50,15 +50,16 @@
     inset: auto;
     order: 3;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     width: 100%;
   }
 
   .mh-mascot-stage__word {
+    position: static;
     font-size: clamp(40px, 14vw, 90px);
-    left: 50%;
-    transform: translateX(-50%);
+    text-align: center;
   }
 
   .mh-mascot-stage__image {
